--- a/web/index.html
+++ b/web/index.html
@@ -1,21 +1,137 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bing 10.0</title> 
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Bing 10.0</title>
 </head>
 <body>
-    <form id="formValues">
-        <textarea name="" id="output" cols="30" rows="10" disabled></textarea>
-        <br>
-        <label for="forMsg">Mensagem</label>
-        <input name="msg" >
-        <br><br>
-        <button id="sub" type="submit">Enviar Post</button>
-      </form>
-      <br>
-</body>
+
+<style>
+
+form{
+  padding-right: -250px;
+}
+  :root{
+    --dark: #0c0c0c;
+    --white: #fff;
+    --purple: #5959ff;
+    --gray: #949494;
+    --gray2: #cccccc;
+  }
+  
+  body{
+    background-color: var(--dark);
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--white);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .box-questions{
+    margin-top: 1rem;
+    background-color: var(--white);
+    color: var(--dark);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-height: 95vh;
+    width: 200%;
+    max-width: 600px;
+    min-height: 700px;
+    border-radius: 10px;
+    text-align: center;
+    overflow: hidden;
+  }
+  
+  .header{
+    background-color: var(--purple);
+    color: var(--white);
+    border-radius: 10px 10px 0 0;
+    font-size: 1.4rem;
+    padding: 1rem;
+  }
+  
+  .footer{
+    background-color: var(--purple);
+    border-radius: 0 0 10px 10px;
+    padding: 1rem;
+    display: flex;
+    gap: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  input{
+    text-align: center;
+    margin-left: 120px;
+    width: 50%;
+    border: none;
+    outline: none;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 1rem;
+  }
+  
+  button{
+    margin-right: 90px;
+    border: none;
+    border-radius: 5px;
+    padding: 10px;
+    font-size: 1rem;
+    
+  }
+  
+  button:hover{
+    cursor: pointer;
+    transition: .4s;
+    background-color: var(--gray);
+  }
+  
+  #history{
+    padding: 1rem;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    height: 60vh;
+  }
+
+  #output {
+    width: 97%;
+    height: 100%;
+    padding: 10px;
+    border: none;
+    background-color: var(--gray2);
+    color: var(--dark);
+    border-radius: 5px;
+    resize: none;
+  }
+
+</style>
+
+<form id="formValues">
+  <div class="box-questions">
+    <div class="header">
+      <p>Bing 10.0</p>
+    </div>
+    <p id="status"></p>
+    <div id="history">
+      <textarea id="output" disabled></textarea>
+    </div>
+    <div class="footer">
+      <input type="text" id="msg" name="msg" placeholder="Pergunte aqui...">
+      <button class="submit" id="submit" type="submit">Enviar</button>
+    </div>
+  </div>
+</form>
+
 <script type="module" src="web/js/post.js"></script>
+</body>
 </html>
