--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,7 @@ form{
   }
   
   body{
-    background-color: var(--dark);
+    background-color: rgb(47, 47, 238);
     font-family: Arial, Helvetica, sans-serif;
     color: var(--white);
     display: flex;
